<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SleepMonitor</string>
    <string name="startedRecording">Started Recording</string>
    <string name="action_settings">Settings</string>
    <string name="startRecording">Start Recording</string>
    <string name="stopRecording">Stop Recording</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="sleepMonitoring">Sleep Monitoring</string>
    <string name="stoppedRecording">Stopped Recording</string>
    <string name="couldNotCreateRecordFile">Could not create Record File</string>
    <string name="app_directory">/sleepmonitoring</string>
    <string name="record_directory">/records</string>
    <string name="record_file_ending">.mp3</string>
    <string name="myRecords">My Records</string>
    <string name="title_activity_record_details">RecordDetails</string>
    <string name="emptyString"></string>
    <string name="showLineChart">Show Line Chart</string>
    <string name="alarmClock">Alarm Clock</string>
    <string name="noRecordFileFound">No Record Found</string>
    <string name="noVolumeDataFound">No Volume Data found</string>
    <string name="resetDatabase">Reset Database</string>
    <string name="deleteAllRecords">Delete All Record Files</string>
    <string name="succRemovedAllRecordFiles">Successfully Removed %d Record File(s)</string>
    <string name="resetedDatabase">Database Has Been Reseted</string>
    
    <string-array name="recordingOptions">
        <item>User Data (Movement + Sound)</item>
        <item>Audio File</item>
        <item>User Data And Audio File</item>
    </string-array>
    <string-array name="noiseScanIntervals">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
        <string name="whatToRecord">What shall be recorded:</string>
        <string name="recording">Recording...</string>
        <string name="recordFileSize">Size: %SIZE</string>
        <string name="recrodFileDuration">Duration: %DURATION</string>
        <string name="notAvailable">Not Available</string>
        <string name="recordIntervalHard">Data scan interval (in s):</string>
        <string name="currentPositionStartValue">0:0:0</string>
        <string name="pause">Pause</string>
        <string name="noiseMeter">Noise Meter</string>
        <string name="noRecords">There are no records</string>
        <string name="deleteRecord">Delete Record</string>
        <string name="deleteUserData">Delete User Data</string>
        <string name="fromInterval">Between:</string>
        <string name="toInterval">and:</string>
        <string name="on">On</string>
        <string name="off">Off</string>
        <string name="calibrate">Calibrate</string>
        <string name="stopAlarm">Stop Alarm</string>

</resources>
