<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lin_frag_sleepMonitoring"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.htwg_konstanz.chhauss.sleepmonitor.RecordDetails" >

    <TextView
        android:id="@+id/recordNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emptyString"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/recordFileSizeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordFileSize"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/recordFileDurationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recrodFileDuration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/curPosTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/currentPositionStartValue"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/playbackSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/playPauseRecordBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:text="@string/play" />

        <Button
            android:id="@+id/stopRecordBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:text="@string/stop" />

    </LinearLayout>

    <Button
        android:id="@+id/showLineChartBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        android:text="@string/showLineChart" />

    <Button
        android:id="@+id/deleteRecordBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="onButtonClicked"
        android:text="@string/deleteRecord" />

    <Button
        android:id="@+id/deleteUserDataBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:onClick="onButtonClicked"
        android:text="@string/deleteUserData" />

</LinearLayout>
