<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.htwg_konstanz.chhauss.sleepmonitor.SleepMonitoring" >

    <TextView
        android:id="@+id/alarmStatusTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatToRecord"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/recordOptsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/recordingOptions" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordIntervalHard"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/noiseScanIntervalSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/noiseScanIntervals" />

    <Button
        android:id="@+id/recordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/startRecording" />


</LinearLayout>
